<resources>
    <string name="app_name">Tuesday Trios</string>


    <string name="title_section1">Table</string>
    <string name="title_section2">Averages</string>
    <string name="title_section3">Results</string>
    <string name="title_section4">Fixtures</string>
    <string name="title_section5">Highs</string>

    <!--<string name="hello_world">Hello world!</string>-->

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>

    <string name="pref_team_name">Team name</string>
    <string name="pref_team_name_summary">Set your team name</string>
    <string name="pref_player_name">Player name</string>
    <string name="pref_player_name_summary">Set your player name</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="title_activity_about">About</string>


    <string name="about_app_title">About the App</string>
    <string name="about_app_version">Version...</string>
    <string name="about_app_programmed">Designed and Programmed by</string>
    <string name="about_app_programmer">Doug Anderson</string>
    <string name="about_app_company">© Oak Cottage Studios Ltd. 2015</string>

    <string name="about_league_title">About the Tuesday Trios</string>
    <string name="about_league_text1">
        The TT League was formed in late 2022.\n
        We\'re currently made up of 15 teams and play every week at Atlantic Bowl, Altrincham.\n
        The league is a mixed trios handicapped league bowling every Tuesday evening from 7:30pm.\n
        New bowlers welcome to join teams.
    </string>
    <!--<string name="about_league_text2">This year is the 50th anniversary of the Bat league.</string>-->
    <!--<string name="about_league_text3">The league is a mixed trio’s handicapped league bowling every Tuesday evening.</string>-->
    <!--<string name="about_league_text4">New bowlers welcome to join teams.</string>-->
    <string name="about_league_text5">
        League Venues\n
        2023 - Present    Atlantic Bowl, Altrincham
    </string>
    <!--<string name="about_league_text6">1965 - 1995       Belle Vue Bowl, Manchester</string>-->
    <!--<string name="about_league_text7">1995 - 2002       White City Megabowl</string>-->
    <!--<string name="about_league_text8">2003 - 2004       XS SuperBowl, Worsley</string>-->
    <!--<string name="about_league_text9">2005 - Present   Hollywood Bowl, Ashton under Lyne</string>-->



</resources>
